fix mobile overflow

--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -45,6 +45,9 @@ body{
     overflow: hidden;
     cursor: none;
     opacity: .7;
+    @include mobile{
+        overflow: scroll;
+    }
 }
 .link{
     opacity: .8;
